chore(cache): disable caching for core assets and bust cache via querystrings

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preload" as="image" href="bollard_striker/bollard.png" />
   <link rel="preload" as="audio" href="bollard_striker/sounds/collision.mp3" />
   <link rel="preload" as="audio" href="bollard_striker/sounds/click.mp3" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=2" />
 </head>
 <body>
   <div class="app">
@@ -71,7 +71,7 @@
     </footer>
   </div>
 
-  <script src="game.js"></script>
+  <script src="game.js?v=3"></script>
 </body>
 </html>
 
