fix(mobile UX): restore header; add floating Settings button; auto-start BGM on mobile; guarantee White Monster after 5 dodges; tune mobile speeds

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
       </div>
     </main>
 
+    <!-- Mobile floating Settings button -->
+    <button id="settingsFab" class="fab" aria-label="Settings">⚙️</button>
+
     <footer class="footer">
       <span>© <span id="year"></span> Bollard Striker</span>
     </footer>
