ux(mobile): labeled floating Settings button; increase White Monster spawn rate; ensure Settings opens on mobile

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </main>
 
     <!-- Mobile floating Settings button -->
-    <button id="settingsFab" class="fab" aria-label="Settings">⚙️</button>
+    <button id="settingsFab" class="fab" aria-label="Settings">Settings ⚙️</button>
 
     <footer class="footer">
       <span>© <span id="year"></span> Bollard Striker</span>
