feat(mobile): 9:16 scaling on phones; bottom-sheet Settings; faster mobile hazard ramp; larger White Monster icon; touch-friendly Settings FAB

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       </section>
 
       <!-- Settings overlay -->
-      <section id="settings" class="overlay">
+      <section id="settings" class="overlay sheet">
         <h2>Settings</h2>
-        <form id="settingsForm" class="settings-form">
+        <form id="settingsForm" class="settings-form sheet-panel">
           <div class="field">
             <label class="row"><input type="checkbox" id="enableTilt" /> <span>Enable Tilt Controls</span></label>
             <button type="button" id="requestMotionPermission" class="btn">Enable Motion Access (iOS)</button>
