Add Vercel Postgres support, performance optimizations, mobile improvements, and game depth enhancements

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       <!-- Leaderboard overlay -->
       <section id="leaderboard" class="overlay">
         <h2>Leaderboard</h2>
+        <div class="cta-row" style="margin-bottom: 12px;">
+          <button id="refreshLeaderboard" class="btn" style="font-size: 14px; padding: 8px 12px;">🔄 Refresh</button>
+        </div>
         <ol id="leaderboardList" class="board"></ol>
         <div class="cta-row">
           <button id="backFromLeaderboard" class="btn">Back</button>
