Replace 'Created by SSgt King' with link to ck42x.com
- Changed credit text to link to ck42x.com
- Added hover styling for the credit link
- Opens in new tab with proper security attributes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
           <button id="achievementsBtn" class="btn">Achievements</button>
           <button id="tutorialBtn" class="btn">How to Play</button>
         </div>
-        <p class="credit">Created by SSgt King</p>
+        <p class="credit">
+          <a href="https://ck42x.com" target="_blank" rel="noopener noreferrer">ck42x.com</a>
+        </p>
       </section>
 
       <!-- Countdown overlay -->
