--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <h2>Statistics</h2>
         <div id="statsContent" class="stats-content"></div>
         <div class="cta-row">
+          <button id="resetStatsBtn" class="btn" style="background: var(--deep-red);">Reset Stats</button>
           <button id="backFromStats" class="btn">Back</button>
         </div>
       </section>
